# m08f-printer

./: LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
cups/: m08f-backend  m08f.ppd
docs/: RELEASE-RUNBOOK.md
docs/outreach/: forums.md  kernc-gist.md  openprinting.md  phomemo-tools.md  reddit.md
docs/superpowers/plans/: 2026-06-18-aur-package.md
docs/superpowers/specs/: 2026-06-18-aur-package-design.md
m08f/: cli.py  config.py  escpos.py  printer.py  raster.py  transport.py
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  PUBLISHING.md
packaging/deb/debian/: changelog  control  postinst  prerm  rules
packaging/rpm/: m08f-printer.spec
scripts/: repo-setup.sh
tests/: test_backend.py  test_cli.py  test_config.py  test_escpos.py  test_printer.py  test_raster.py
udev/: 99-m08f.rules
